--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
 						<img src="./image/logo.svg" alt="" />
 					</a>
 					<div class="d-flex align-items-center">
-						<button class="button-transparent-bg mx-2">
+						<a href="org_login.html" class="button-transparent-bg mx-2">
 							Стать организатором
-						</button>
-						<button class="user d-flex align-items-center button-entrance">
+						</a>
+						<a href="auth.html" class="user d-flex align-items-center button-entrance">
 							<i class="fa-solid fa-user mx-2"></i>Войти
-						</button>
+						</a>
 					</div>
 				</div>
 			</div>
@@ -149,7 +149,7 @@
 			<div class="carousel-container">
 				<h2 class="headerEvents">Ближайшие события</h2>
 				<div class="electricCarousel">
-					<div class="card mx-5">
+					<a href="card.html" class="card mx-5">
 						<div class="card-header-custom">
 							<img src="./image/imageOneCarousel.jpg" alt="" />
 							<span class="price-container">от 1500 р</span>
@@ -161,9 +161,9 @@
 								Завод Шпагина
 							</p>
 						</div>
-					</div>
+					</a>
 
-					<div class="card mx-5">
+					<a href="card.html" class="card mx-5">
 						<div class="card-header-custom">
 							<img src="./image/imageCarousel.jpg" alt="" />
 							<span class="price-container">от 700 р</span>
@@ -175,9 +175,9 @@
 								Secret place
 							</p>
 						</div>
-					</div>
+					</a>
 
-					<div class="card mx-5">
+					<a href="card.html" class="card mx-5">
 						<div class="card-header-custom">
 							<img src="./image/imageThreeCarousel.png" alt="" />
 							<span class="price-container">от 1000 р</span>
@@ -190,7 +190,7 @@
 								ДК железнедорожников
 							</p>
 						</div>
-					</div>
+					</a>
 
 					<div class="card mx-5">
 						<div class="card-header-custom">
